tests/src/frontend/expand/invalid/extension_class3.sk
base class A

extension class A()
